<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dogeweather</string>
    <string name="config_title">Choose your location:</string>
    <string name="config_auto">Automatic</string>
    <string name="condig_auto_desc">(Using your approx. gps location)</string>
    <string name="config_manual">Search</string>
    <string name="config_hint">City (ex: Oslo, NO)</string>
    <string name="dialog_title">Results</string>
    <string name="dialog_error">No results, try again</string>

    <string name="openweather_key">Get openweather APP_ID</string>
</resources>
